--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-sass": "npm:dart-sass",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "styled-components": "^5.0.1",
     "typescript": "~3.7.2"
@@ -39,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^5.0.1"
   }
 }
