--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^5.0.1",
+    "@types/webpack-env": "^1.15.1",
     "svg-sprite-loader": "^4.2.2",
     "svgo-loader": "^2.2.1"
   },
